Fix search form fields

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -152,6 +152,11 @@ body > div > table > thead > tr > th {
   margin-top: 300px;
 }
 
+.field7 {
+  position: relative;
+  top: 20px;
+}
+
 .form-control {
   max-width: 350px;
 }
