--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,8 +11,8 @@
 </div>
 <% end %>
 
-<% if User.find(session[:user_id]).access == "admin" %>
+<% if User.find(session[:user_id]).access == "admin" || User.find(session[:user_id]).access == "school"%>
   <%= form_tag(users_search_path(params.merge(format: 'csv'))) do %>
-  <%= submit_tag 'Export to CSV', class: "btn btn-info"%>
+  <%= submit_tag 'Export to CSV', class: "btn btn-info export"%>
   <% end %>
 <% end %>
