Add ajax to generate file for download

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -361,3 +361,9 @@ body > div > table > thead > tr > th {
 body > div > table > tbody > tr > td {
   line-height: 35px;
 }
+
+.inline {
+  position: relative;
+  top: -53px;
+  left: 150px;
+}
