Add search form text

--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -1,4 +1,5 @@
-<h1>Search for resumes below!</h1>
+<h1>Search for resumes below! </h1>
+<h3>To review all candidates in the INCS Resume Bank, please leave your selection criteria blank and select “search” below.</h3>
 
 <%= form_tag('/users/search') do %>
   <div class="field">
