Change wording on School leader registration button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
       <%= button_to "Candidate Resume Bank & Fair Registration", users_new_teacher_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
     <div class="main-container">
-      <%= button_to "School Resume Bank Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
+      <%= button_to "School Leader Resume Bank Registration", users_new_school_path, method: :get, class: "btn btn-info main-btn"%>
     </div>
   <% end %>
 
