--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -26,7 +26,7 @@
 
   <div class="field">
     <em>
-    <%= f.label(:name, "Please select the option that best fits you *") %></em><br>
+    <%= f.label(:name, "Please select the option that best fits you*") %></em><br>
     <%= f.radio_button(:register, "both") %>
     <%= f.label :name, class: 'label-align' do "I would like to add my resume to the INCS Online Resume Bank AND would like this to serve as my registration for the #{link_to('2016 Teacher Job Fair', 'https://www.incschools.org/events/tjf/')} on March 5th, 2016.".html_safe  end%>
     <%= f.radio_button(:register, "bank", class: 'label-up') %>
@@ -36,7 +36,7 @@
   </div>
 
   <div class="field">
-    <label><em>How did you hear about the 2016 INCS Teacher Job Fair? (Check all that apply.)</em></label><br>
+    <label><em>How did you hear about the 2016 INCS Teacher Job Fair? (Check all that apply.)*</em></label><br>
     <ul class="checkbox-grid2">
       <% Source.all.each do |source| %>
         <% if @user.sources.pluck(:source_name).include?(source.source_name) %>
