Add date registered to csv, add new programming content to homepage, update location info

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -367,3 +367,17 @@ body > div > table > tbody > tr > td {
   top: -53px;
   left: 150px;
 }
+
+.style_image {
+  float: left;
+  margin-right: 15px;
+}
+
+.content-container {
+  width: 100%;
+  padding-bottom: 15px;
+}
+
+.highlights {
+  text-decoration: underline;
+}
