--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -56,12 +56,40 @@
 
   <p class="main-content"><strong>Location</strong></p>
   <p class="main-content">
-  UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632
+  UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632</p>
+  <p class="main-content">Parking is limited and public transportation is encouraged.</p>
     <ul class="main-content-list">
-      <li>There will be street parking available</li>
-      <li>The school is also accessible by public transportation. It is approximately one mile northwest of the Pulaski Orange Line stop</li>
+      <li>CTA Orange Line: Kedzie
+        <ul class="main-content-sublist">
+          <li>Take #47 bus towards Archer/Cicero, get off at 47th St & Kildare</li>
+          <li>15-20 minute walk from station</li>
+        </ul>
+      </li>
+      <li>CTA Buses
+        <ul class="main-content-sublist">
+          <li>#47, #53 and #53A</li>
+        </ul>
+      </li>
     </ul>
+
+  <p class="main-content"><strong>Programming</strong></p>
+  <p class="main-content">
+    Join us immediately after the INCS Teacher Job Fair for one of the following hour long educational workshops. <span class="highlights">CPDUs will be offered for both of these workshops.</span>
   </p>
+
+  <div class="content-container">
+  <p class="main-content"><img src=""><%=image_tag("Heather-Calomese-Headshot.jpg", :class => "style_image")%><strong>Which Runway Do We Use?</strong></p>
+  <p class="main-content"><em>Presented by</em> <a href="https://www.incschools.org/wp-content/uploads/2014/08/Heather-Calomese-bio.pdf">Heather Calomese</a>, Director of Specialized Instruction, UNO Charter School Network</p>
+
+  <p class="main-content">Managing your special education classroom is like performing the job of an air traffic controller.  Special Education settings can be busy and distracting, which is not the environment that we want with our population of students. How can teachers effectively manage the traffic of their classroom while protecting the learning environment? How do teachers effectively plan and execute transitions?  How do we effectively communicate with the adults and students to ensure learning occurs?  This mini workshop will help participants understand the importance of communication, routines, and planning that will ensure classroom time is maximized and students are engaged.</p>
+  </div>
+  <div class="content-container">
+  <p class="main-content"><%=image_tag("Pryor-headshot-2013.jpg", :class => "style_image")%><strong>First Comes Oracy, then Comes Literacy</strong></p>
+  <p class="main-content"><em>Presented by</em> <a href="https://www.incschools.org/wp-content/uploads/2014/08/Susan-Pryor-bio.pdf">Susan Pryor</a>, Primary Instructional Coordinator, Erie Elementary School</p>
+
+  <p class="main-content">In this session, we will define and describe what oracy means and explore how oral language drives both language and literacy development. Participants will learn specific strategies that help students gain access to material presented in a second language and promote active engagement with both content and language.</p>
+  </div>
+
     <%= button_to "Schools: Register Here Today!", "https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809", method: :get, class: "btn btn-info btn-centered" %>
 
   <p class="main-content"><br>Click <a href="https://www.facebook.com/media/set/?set=a.10152791985156379.1073741839.91629716378&type=1">here</a> to view photos of our 2015 INCS Teacher Job Fair, where recruiters from <em>over 120 Illinois charter public school campuses met with</em> highly-qualified applicants for more than <em>500</em> teaching, school leadership, social work, school nurse and administrative positions.
