--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -47,10 +47,11 @@
   <p class="main-content"><strong>Agenda</strong></p>
   <p class="main-content">
     <ul class="main-content-list">
-      <li>8:00 am - 9:00 am, School table set-up</li>
-      <li>8:30 am, Candidate registration begins</li>
-      <li>9:00 am - 12:30 pm, Meet and greet with candidates & schools</li>
-      <li>1:00 pm - 3:00 pm, On-site teacher interviews (by invitation only)</li>
+      <li>8:00 am - 9:00 am: School table set-up</li>
+      <li>8:30 am: Candidate registration begins</li>
+      <li>9:00 am - 12:30 pm: Meet and greet with candidates & schools</li>
+      <li>12:30 pm – 1:30 pm Educational workshops</li>
+      <li>1:00 pm - 3:00 pm: On-site teacher interviews (by invitation only)</li>
     </ul>
   </p>
 
