Add show all teachers option

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,9 @@
         <% elsif User.find(session[:user_id]).access == "pending" %>
 
         <% elsif User.find(session[:user_id]).access == "admin" %>
-          <li role="presentation"><a href="/users/pending">Pending</a></li>
-          <li role="presentation"><a href="/users/schools">Schools</a></li>
+          <li role="presentation"><a href="/users/pending">Pending Schools</a></li>
+          <li role="presentation"><a href="/users/schools">All Schools</a></li>
+          <li role="presentation"><a href="/users/teachers">All Candidates</a></li>
           <li role="presentation"><a href="/users/school/<%=session[:user_id]%>">Search</a></li>
         <% elsif User.find(session[:user_id]).access == "school" %>
           <li role="presentation"><a href="/users/school/<%=session[:user_id]%>">Search</a></li>
