--- a/app/views/users/teachers_index.html.erb
+++ b/app/views/users/teachers_index.html.erb
@@ -8,3 +8,7 @@
   <label>Active:</label> <% if user.is_active? %> Yes <% else %> No <% end %>
 </div>
 <% end %>
+
+<% if User.find(session[:user_id]).access == "admin" || User.find(session[:user_id]).access == "school"%>
+  <a href="/users/teachers-csv"><button class="btn btn-info" id="gen-csv">Generate CSV</button></a>
+<% end %>
