--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -55,6 +55,11 @@
     </ul>
   </p>
 
+  <p class="main-content"><strong>Registration</strong></p>
+  <p class="main-content">
+  Candidate check-in will open at 8:30am. <span style="text-decoration: underline">On-site registration is available</span>. Advance registration is encouraged to avoid extended wait times.
+  </p>
+
   <p class="main-content"><strong>Location</strong></p>
   <p class="main-content">
   UNO Charter School Network (UCSN*) Veterans Memorial Campus. 4248 W. 47th St., Chicago, IL 60632</p>
@@ -65,6 +70,11 @@
           <li>Take #47 bus towards Archer/Cicero, get off at 47th St & Kildare</li>
           <li>15-20 minute walk from station</li>
         </ul>
+      <li>CTA Orange Line: Pulaski
+        <ul class="main-content-sublisht">
+          <li>15-20 minute walk from station (.08 mile)</li>
+        </ul>
+      </li>
       </li>
       <li>CTA Buses
         <ul class="main-content-sublist">
