Fix additional info field

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -160,6 +160,10 @@ body > div > table > thead > tr > th {
   margin: 10px;
 }
 
+.field8 {
+  margin-top: 1100px;
+}
+
 .form-control {
   max-width: 350px;
 }
