Update email content

--- a/app/views/user_mailer/school_activated_email.html.erb
+++ b/app/views/user_mailer/school_activated_email.html.erb
@@ -10,17 +10,15 @@
     </p>
 
     <p>
-      With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select. In an effort to provide you with the most current database, all resumes will be de-activated after 30 days of submission, unless a candidate selects to re-activate his/her account.<br>
+      With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.<br>
     </p>
-    <p>
-      With this tool, you may also see who is registered for the 2016 Teacher Job Fair on Saturday, March 5th, 2016, at USCN’s Veterans Memorial Campus at 4248 W. 47th St, from 9:00-12:00pm. If you have not purchased your table for the fair yet and would like to take advantage of our reduced registration rates, visit us <a href="https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809">here</a>!<br>
-    </p>
+
     <p>
       If you need any assistance using our database, please do not hesitate to contact me at the information below. <br>
     </p>
 
     <p>
-      Best,<br><br>
+      Thank you,<br><br>
       Stephanie Arias<br>
       Charter Support Manager<br>
       Illinois Network of Charter Schools<br>
