--- a/app/views/user_mailer/school_email.text.erb
+++ b/app/views/user_mailer/school_email.text.erb
@@ -1,10 +1,10 @@
 Dear <%= @user.first_name %> <%= @user.last_name%>,
 
-Thank you for your interest in the INCS Resume Bank! Your registration has been received.  Please allow up to 2 business days for INCS staff to review and process approval of your account.
+Thank you for your interest in the INCS Resume Bank! Your registration has been received.  Please allow up to 3 business days for INCS staff to review and process approval of your account. If delayed, please contact me directly at the email below.
 
-Once approved, you will receive a confirmation email and will be able to search for candidates, learn who is registered for our 2016 Teacher Job Fair, and access candidates’ contact information to set up interviews according to your unique recruitment process and timeline.
+Once approved, you will receive a confirmation email and will be able to search for candidates and access their contact information to set up interviews according to your unique recruitment process and timeline.
 
-In the meantime, you may learn more about the 2016 Teacher Job Fair and register here: https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809. We look forward to seeing you on March 5, 2016 at USCN's Veterans Memorial Campus, from 9:00am-12pm for this event. Register today!
+Please let me know if you have any questions!
 
 Sincerely,
 
