--- a/app/views/user_mailer/school_activated_email.text.erb
+++ b/app/views/user_mailer/school_activated_email.text.erb
@@ -2,13 +2,11 @@ Dear <%= @user.first_name %> <%= @user.last_name %>
 
 Your registration has been approved, and you can now access INCS’s Online Resume Bank here: http://www.teacherjobfair.org/sessions/new.
 
-With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select. In an effort to provide you with the most current database, all resumes will be de-activated after 30 days of submission, unless a candidate selects to re-activate his/her account.
-
-With this tool, you may also see who is registered for the 2016 Teacher Job Fair on Saturday, March 5th, 2016, at USCN’s Veterans Memorial Campus at 4248 W. 47th St, from 9:00-12:00pm. If you have not purchased your table for the fair yet and would like to take advantage of our reduced registration rates, visit us here: https://www.eventbrite.com/e/teacher-job-fair-tickets-19644359809!
+With your account, you can search for candidates that meet your team needs, browse through their registration summaries, and download the resumes that you select.
 
 If you need any assistance using our database, please do not hesitate to contact me at the information below. 
 
-Best,
+Thank you,
 Stephanie Arias
 Charter Support Manager
 Illinois Network of Charter Schools
