--- a/app/views/user_mailer/teacher_email.text.erb
+++ b/app/views/user_mailer/teacher_email.text.erb
@@ -2,12 +2,7 @@ Dear <%= @user.first_name %>,
 
 Thank you for using INCS’s Online Resume Bank. Your information has been received.
 
-If you selected to add your resume to the online Bank, registered school leaders approved by INCS will now be able to access your information. If you selected to register for the 2016 Teacher Job Fair and not be added to the toolbox, rest assured that your resume remains private.
-
-Please keep your username and password for your records. You can log into your account at any time to:
-- Register for Teacher Job Fair on Saturday, March 5th (more info here: https://www.incschools.org/events/teacher-job-fair/
-- Update or delete your resume
-- Change your profile
+Please keep your username and password for your records. You can log into your account at any time to upload, edit or delete any part of your profile.
 
  If you need any assistance using our database, please do not hesitate to contact me at the information below.  
 
