add delete option for admins for users

--- a/app/views/users/teachers_index.html.erb
+++ b/app/views/users/teachers_index.html.erb
@@ -5,7 +5,9 @@
   <label>Name:</label> <%= user.first_name %> <%= user.last_name %><br>
   <label>Email:</label> <%= user.email %><br>
   <label>Registered:</label> <% if user.register == 'bank' %> No <% else %> Yes <% end %><br>
-  <label>Active:</label> <% if user.is_active? %> Yes <% else %> No <% end %>
+  <label>Active:</label> <% if user.is_active? %> Yes <% else %> No
+  <%= button_to "Delete", user, method: :delete, class: "btn btn-danger" %>
+  <% end %>
 </div>
 <% end %>
 
