Add search result totals and will_paginate gem

--- a/app/views/users/pending_index.html.erb
+++ b/app/views/users/pending_index.html.erb
@@ -3,6 +3,7 @@
     <%= flash[:notice] %>
   </div>
 <% end %>
+<h3><%= @users.count %> Results:</h3>
 <% @users.each do |user| %>
 <div class="result">
   <br>
