--- a/app/views/users/show_school.html.erb
+++ b/app/views/users/show_school.html.erb
@@ -1,7 +1,7 @@
 <h1>Search for resumes below! </h1>
 <h3>To review all candidates in the INCS Resume Bank, please leave your selection criteria blank and select “search” below.</h3>
 
-<%= form_tag('/users/search') do %>
+<%= form_tag('/users/search', :method => 'get') do %>
   <div class="field">
     <label><em>What type of position are you looking for? (Check all that apply) *</em></label><br>
     <ul class="checkbox-grid2">
