--- a/app/views/users/_teacher_form.html.erb
+++ b/app/views/users/_teacher_form.html.erb
@@ -268,6 +268,9 @@
   <% else %>
     <div class="actions">
       <%= f.submit 'Update Information', :name => 'submit', :class => "btn btn-info" %>
+      <a href="/users/<%=@user.id%>">
+        <button class="btn btn-danger">Cancel</button>
+      </a>
     </div>
   <% end %>
    <br>
