--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<h3><%= @users.count %> Results:</h3>
+<h3>Results:</h3>
+<%= page_entries_info(@users, :model => "Candidate")%>
 
 <% @users.each do |user| %>
 <div class="result">
@@ -16,3 +17,5 @@
   <%= submit_tag 'Generate CSV', class: "btn btn-info export"%>
   <% end %>
 <% end %>
+
+<%= will_paginate @users %>
