--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
       <th>Document</th>
       <th>Download Link</th>
       <% if @current_user.access == "teacher" %>
-      <th>Active</th>
+        <th>Active</th>
       <% end %>
 
     </tr>
@@ -20,38 +20,38 @@
     <% @resumes.each do |resume| %>
       <% if resume.active == false && @current_user.access == "school" %>
       <% else %>
-      <tr>
-         <td class="res-row"><%= resume.name %></td>
-         <td class="res-row"><%= link_to "Download", resume.attachment_url %></td>
-         <% if @current_user.access != "teacher"%>
-         <% elsif resume.active == true %>
+        <tr>
+          <td class="res-row"><%= resume.name %></td>
+          <td class="res-row"><%= link_to "Download", resume.attachment_url %></td>
+          <% if @current_user.access != "teacher"%>
+          <% elsif resume.active == true %>
             <td class="res-row"> Yes </td>
-         <% else %>
-            <td class="res-row"> No </td>
-         <% end %>
-         <% if @current_user.access == "teacher" %>
-          <td class="res-cell">
-          <% if resume.active == false %>
-           <%= button_to "Activate", resume, method: :put, class: "btn btn-info btn-activate" %>
           <% else %>
-            <%= button_to "Deactivate", resume, method: :put, class: "btn btn-info btn-deactivate"%>
+            <td class="res-row"> No </td>
           <% end %>
-           </td>
-           <td class="res-cell"><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %>
+          <% if @current_user.access == "teacher" %>
+            <td class="res-cell">
+              <% if resume.active == false %>
+                <%= button_to "Activate", resume, method: :put, class: "btn btn-info btn-activate" %>
+              <% else %>
+                <%= button_to "Deactivate", resume, method: :put, class: "btn btn-info btn-deactivate"%>
+              <% end %>
+            </td>
+            <td class="res-cell"><%= button_to "Delete", resume, method: :delete, class: "btn btn-danger", confirm: "Are you sure that you want to delete #{resume.name}?" %>
           </td>
-         <% end %>
-      </tr>
+        <% end %>
+        </tr>
       <% end %>
     <% end %>
   </tbody>
 </table>
 <% if @current_user.access == "teacher" %>
-<%= link_to "Upload additional documents", resumes_additional_path, class: "btn btn-primary" %><br><br>
-<label>Note:</label><span> Your active documents will only be available to charter school leaders who express a recruitment need and will not be available to the general public. Your resume will be deactivated after 30 days. To re-activate, simply log in and select the activate button above.</span>
-<br />
-<br />
+  <%= link_to "Upload additional documents", resumes_additional_path, class: "btn btn-primary" %><br><br>
+  <label>Note:</label><span> Your active documents will only be available to charter school leaders who express a recruitment need and will not be available to the general public. Your resume will be deactivated after 30 days. To re-activate, simply log in and select the activate button above.</span>
+  <br />
+  <br />
 <% end %>
-  <h3>Job Seeker Details</h3>
+<h3>Job Seeker Details</h3>
 <label>Name:</label> <%= @user.prefix%> <%= @user.first_name%> <%=@user.last_name%><br>
 <label>Email:</label> <%= @user.email%><br>
 <label>Registered for Job Fair:</label> <% if @user.register != "bank" %>Yes<% else %>No<%end%><br>
@@ -71,5 +71,8 @@
 <label>Additional Information:</label> <div class="additional-info"><p><%= @user.additional %></p></div><br>
 
 <% if @current_user.access == "teacher" && @current_user.id == @user.id %>
-<%= button_to "Edit Information", edit_user_path, :class => "btn", :method => :get %><br>
+  <div class="actions">
+    <%= button_to "Edit Information", edit_user_path, :class => "btn", :method => :get %>
+    <%= button_to "Delete Profile", @current_user, :class => "btn btn-danger", :method => :delete, :confirm => 'Are you sure you want to remove yourself from the INCS Resume Bank?' %>
+  </div>
 <% end %>
